# nexus

./: Cargo.toml  LICENSE  README.md
entities/: Cargo.toml
entities/src/: hardware.rs  instance.rs  lib.rs  metrics.rs  replicant.rs
proto/: enums.proto  generic.proto  instance.proto  nexus.proto  replicant.proto
replicant/: Cargo.toml  build.rs
replicant/conf/: replicant.yml
replicant/src/: cli.rs  client.rs  config.rs  main.rs  serial_number.rs  server.rs  state.rs
replicant/src/methods/: mod.rs  register.rs
replicant/src/routines/: base.rs  mod.rs  ping.rs  register.rs
replicant/src/services/: base.rs  hardware.rs  meta.rs  mod.rs
server/: Cargo.toml  build.rs
server/conf/: nexus.yml
server/migrations/: 00001_nexus_server.sql
server/src/: cli.rs  config.rs  database.rs  main.rs  server.rs  state.rs
server/src/services/: base.rs  meta.rs  mod.rs  register.rs
