[package]
name = "replicant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
docker-api = "0.14.0"
futures = "0.3.30"
rand = "0.8.5"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
prost = "0.12.4"
tonic = "0.11.0"
entities = { path = "../entities" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
ctrlc = "3.4.4"

[build-dependencies]
tonic-build = "0.11.0"

[[bin]]
name = "replicant"
path = "src/main.rs"
